--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 Flask==0.10.1
 Flask-Login==0.2.11
+Flask-Principal==0.4.0
 Jinja2==2.7.3
 MarkupSafe==0.23
 SQLAlchemy==0.9.6
 WTForms==2.0.1
 Werkzeug==0.9.6
+blinker==1.3
 itsdangerous==0.24
 ordereddict==1.1
+requests==2.3.0
 wsgiref==0.1.2
